Add predefined test case management flows
